--- a/formularios/style.css
+++ b/formularios/style.css
@@ -1,10 +1,28 @@
-body{}
+body{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: normal;
+     font-size: 14px;
+    color: black;
+background: lightskyblue;}
+
+h1{background-color: rgb(231, 231, 148); display: inline-block;
+           color: darkblue;
+        padding: 10px;
+        border: darkblue solid 5px;}
+
+label{width: 50px;}
+label.aloancho{width: auto; display: block;}
+input[type = text], input[type = number], input[type = email] {width: 200px;
+border: 2px solid black; display: inline-block;
+margin: 5px;}
+
+input[type = radio], input[type = checkbox] {width: 15px;
+border: darkblue;}
+
 
 button{background-color:  red; /* Red */
-    border: black; 
+    border: black solid 3px; 
     color: white;
     padding: 5px 5px;
-
     text-align: center;
     text-decoration: none;
     display: inline-block;
