--- a/formularios/formularioprueba/style.css
+++ b/formularios/formularioprueba/style.css
@@ -1,46 +1,74 @@
-body{font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+body{font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      font-size: 12px;
-    background-color: black;
+    background-color: white;
     color: white;
-
+    align-self: center;
+    display: inline-block;
+    
    }
+
+#myform{width:auto;
+    margin: 250px;
+text-align: center;
+border-radius: 5px;
+border: 1px solid;
+padding: 5px;
+background-color: black;
+background-position: center;
+}
+
 h1{color: white;}
      input[type=text] {
         background-image: url(id-card.png);
-        padding-left: 20px;
+        padding-left: 22px;
         background-position: left;
         background-size: 20px;
-        background-repeat: no-repeat;}
- input[type=phone] {background-image: url(phone-numbers-call.png);
-    padding-left: 20px;
+        background-repeat: no-repeat;
+    border-radius: 5px;
+    margin: 5px;}
+        
+ input[type=tel] {background-image: url(phone-numbers-call.png);
+    padding-left: 22px;
     background-position: left;
     background-size: 20px;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+    border-radius: 5px;
+margin: 5px;}
 
 input[type=email] {background-image: url(envelope.png);
-    padding-left: 20px;
+    padding-left: 22px;
     background-position: left;
     background-size: 20px;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    margin: 5px;}
 
 input[type=password] {background-image: url(lock.png);
-    padding-left: 20px;
+    padding-left: 22px;
     background-position: left;
     background-size: 20px;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    margin: 5px;}
 
-input[type=checkbox] {color: white;}
+input[type=checkbox] {color: white;
+    margin: 5px;}
 
 span{color: springgreen;}
 
+a:hover{background-color: yellow;}
+
 button{background-color:green; 
-                                border: darkgreen 3px; 
-                                border-radius: 15px;
+                                border: white 1px; 
+                                border-radius: 10px;
                                 color: white;
-                                padding: 7px 7px;
+                                padding: 2px 2px;
                                 text-align: center;
                                 text-decoration: none;
                                 float: 20%;
-                                font-size: 20px;
-                                 margin-left: 45px;
+                                font-size: 2em;
+                                 margin-left: 40px;
+                                 margin-top: 2px;
+                                 margin-right: 2px;
+                                
                                 }
