--- a/responsividad/style.css
+++ b/responsividad/style.css
@@ -15,7 +15,7 @@ header>nav{width: 80%; height: 100%;
         border: 2px solid black;
         display: inline-block;}
 
-section>div{width:32%; height: 100%;
+section>div{width:32.5%; height: 100%;
            background: aqua;
             border: 1px solid black;
            display: inline-block;}
@@ -30,7 +30,14 @@ footer {width: 100%; height: 100%;
     border: 2px solid black;
    display: inline-block;}
 
+
    @media screen and (max-width:768px){
+    header>div{width: 100%;}
+    header>nav{width: 100%;}
+
+    section>div {width: 100%;}
+}
+@media screen and (min-width:368px){
     header>div{width: 100%;}
     header>nav{width: 100%;}
 
